--- a/docker_quickstart_sln/docker-compose.yml
+++ b/docker_quickstart_sln/docker-compose.yml
@@ -7,8 +7,11 @@ services:
       context: .
       dockerfile: quickstart_api/Dockerfile
     ports:
-      - 5002:80
-  
+      - 6001:80
+    #   - 6002:443
+    # environment:
+    #   - ASPNETCORE_URLS=https://+:443;http://+:80
+
   quickstart_cats_api:
     image: ${DOCKER_REGISTRY-}catsapi
     build:
@@ -23,4 +26,4 @@ services:
       context: .
       dockerfile: quickstart_blazor_app/Dockerfile
     ports:
-      - 5003:80
+      - 4000:80
