--- a/docker_quickstart_sln/quickstart_cats_api/Properties/launchSettings.json
+++ b/docker_quickstart_sln/quickstart_cats_api/Properties/launchSettings.json
@@ -16,7 +16,9 @@
       "launchUrl": "swagger",
       "applicationUrl": "http://localhost:5239",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "REDIS_HOST": "localhost",
+        "REDIS_PORT": "6379"
       }
     },
     "IIS Express": {
@@ -24,7 +26,9 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "REDIS_HOST": "localhost",
+        "REDIS_PORT": "6379"
       }
     }
   }
