--- a/docker_quickstart_sln/quickstart_cats_api/quickstart_cats_api.csproj
+++ b/docker_quickstart_sln/quickstart_cats_api/quickstart_cats_api.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="StackExchange.Redis" Version="2.2.88" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
