--- a/docker_quickstart_sln/docker-compose.yml
+++ b/docker_quickstart_sln/docker-compose.yml
@@ -17,9 +17,14 @@ services:
       dockerfile: quickstart_api/Dockerfile
     ports:
       - 6001:80
-    #   - 6002:443
-    # environment:
-    #   - ASPNETCORE_URLS=https://+:443;http://+:80
+      - 6002:443
+    environment:
+      - ASPNETCORE_URLS=https://+:443;http://+:80
+      - ASPNETCORE_HTTPS_PORT=6002
+      - ASPNETCORE_Kestrel__Certificates__Default__Password=certpassword
+      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/dockerquickstart.pfx
+    volumes:
+      - ~/.aspnet/https:/https:ro
 
   quickstart_cats_api:
     image: ${DOCKER_REGISTRY-}catsapi
@@ -28,16 +33,21 @@ services:
       dockerfile: quickstart_cats_api/Dockerfile
     ports:
       - 5001:80
+      - 5002:443
     depends_on:
       - cache
     links:
       - cache
     environment:
-      REDIS_HOST: cache
-      REDIS_PORT: 6379
+      - ASPNETCORE_URLS=https://+:443;http://+:80
+      - ASPNETCORE_HTTPS_PORT=5002
+      - ASPNETCORE_Kestrel__Certificates__Default__Password=certpassword
+      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/dockerquickstart.pfx
+      - REDIS_HOST=cache
+      - REDIS_PORT=6379
       # REDIS_PASSWORD: <password>
-    # volumes:
-    #   - <mount-path>
+    volumes:
+      - ~/.aspnet/https:/https:ro
 
   quickstart_blazor_app:
     image: ${DOCKER_REGISTRY-}webapp
@@ -46,3 +56,11 @@ services:
       dockerfile: quickstart_blazor_app/Dockerfile
     ports:
       - 4000:80
+      # - 4002:443
+    # environment:
+    #   - ASPNETCORE_URLS=https://+:443;http://+:80
+    #   - ASPNETCORE_HTTPS_PORT=4002
+    #   - ASPNETCORE_Kestrel__Certificates__Default__Password=certpassword
+    #   - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/dockerquickstart.pfx
+    # volumes:
+    #   - ~/.aspnet/https:/https:ro
