--- a/docker_quickstart_sln/quickstart_blazor_app/nginx.conf
+++ b/docker_quickstart_sln/quickstart_blazor_app/nginx.conf
@@ -1,9 +1,37 @@
 events { }
 http {
     include mime.types;
+    ssl_session_cache   shared:SSL:10m;
+    ssl_session_timeout 10m;
 
     server {
-        listen 80;
+        listen 80 default_server;
+        listen [::]:80 default_server;
+        server_name _;
+        return 301 https://localhost:4002$request_uri;
+    }
+    
+    server {
+        listen              443 ssl http2;
+        listen              [::]:443 ssl http2;
+        server_name         localhost:4002;
+        if ($scheme != "https") { 
+            return 301 https://localhost:4002$request_uri;
+        }
+        keepalive_timeout   70;
+
+        ssl_certificate     /https/dockerquickstart.crt;
+        ssl_certificate_key /https/dockerquickstart.rsa;
+        ssl_session_timeout       1d;
+        ssl_protocols             TLSv1.2 TLSv1.3;
+        ssl_prefer_server_ciphers off;
+        ssl_ciphers               ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+        ssl_session_cache         shared:SSL:10m;
+        ssl_session_tickets       off;
+        ssl_stapling              off;
+
+        add_header X-Frame-Options DENY;
+        add_header X-Content-Type-Options nosniff;
 
         location / {
             root /usr/share/nginx/html;
