Added more information to the readme regarding context. Updated commenting on all docker files to help illustrate context and make it more clear on command references

--- a/docker_quickstart_sln/quickstart_api/Dockerfile
+++ b/docker_quickstart_sln/quickstart_api/Dockerfile
@@ -1,23 +1,26 @@
+# docker-compose context: docker_quickstart_sln
+
 # setting up the build image
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /source
 
-# copy each project file into working directory to restore dependencies
-# starting out only copy the quickstart_api and quickstart_lib projects
+# copy the .csproj from the context directory to the image directory
+# copy docker_quickstart_sln/quickstart_api/*.csproj to build/source/quickstart_api
+# copy quickstart_lib/quickstart_api/*.csproj to build/source/quickstart_lib
 COPY quickstart_api/*.csproj ./quickstart_api/
 COPY quickstart_lib/*.csproj ./quickstart_lib/
 
-# restore packages on the project api project
+# In the build image - restore packages on the project api project
 RUN dotnet restore quickstart_api/quickstart_api.csproj
 
-# copy the remaining api and lib project files
+# copy the remaining api and lib project files from the context directory to the image directory
 COPY quickstart_api/. ./quickstart_api/
 COPY quickstart_lib/. ./quickstart_lib/
 
-# set the working directory to /source/project
-WORKDIR  /source/quickstart_api
+# set the working directory to build/source/project
+WORKDIR /source/quickstart_api
 
-# build the api and lib projects for release configuration
+# On the build image - build the api and lib projects for release configuration
 RUN dotnet build -c release --no-restore
 
 # Get the files from the build and publish them for release
@@ -29,7 +32,7 @@ RUN dotnet publish -c release --no-build -o /app
 FROM mcr.microsoft.com/dotnet/aspnet:6.0
 WORKDIR /app
 
-# copy the published files from the app directory
+# copy the files from the published image app directory to the stage image app directory
 COPY --from=publish /app .
 
 # set the entry point command and dll for the app in the image
