Updated cats to use redis connection options and set redis cache to use a password in comose

--- a/docker_quickstart_sln/docker-compose.yml
+++ b/docker_quickstart_sln/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     restart: always
     ports:
       - 6379:6379
+    command: redis-server --requirepass password
     # command: redis-server --save 20 1 --loglevel warning --requirepass <password> # authentication command
     # volumes: # volume binding for persistent cache
     #   - cache:/data
@@ -45,7 +46,7 @@ services:
       - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/dockerquickstart.pfx
       - REDIS_HOST=cache
       - REDIS_PORT=6379
-      # REDIS_PASSWORD: <password>
+      - REDIS_PASSWORD=password
     volumes:
       - ~/.aspnet/https:/https:ro
 
